# brainstorm

./: .gitignore  Cargo.toml  LICENSE  README.md  allnames.json  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  processCardNames.js  snowpack.config.js  styles.css  tsconfig.json  typeahead.ts  vite.config.ts
.github/workflows/: re-deploy.yml
brainstorm/: package-lock.json  package.json
pkg/: package.json  wasm_typeahead.d.ts  wasm_typeahead.js  wasm_typeahead_bg.js  wasm_typeahead_bg.wasm  wasm_typeahead_bg.wasm.d.ts
public/: benchmark.html  index.html
src/: benchmark.js  index.css  index.d.ts  main.js  main.svelte  main.tsx  scryfall.ts  search.ts  typeahead.ts
src/components/: CardDisplay.svelte  CardImage.module.css  CardImage.tsx  CardInfo.svelte  CardLegality.module.css  CardLegality.tsx  CardPrices.module.css  CardPrices.tsx  CardText.module.css  CardText.tsx  Typeahead.module.css  Typeahead.svelte  Typeahead.tsx
src/rust/: lib.rs
src/styles/: styles.css
src/utils/: init.ts  scryfall.ts  search.ts  support.ts
