[package]
name = "wasm-typeahead"
version = "0.1.0"
authors = ["Thomas Crescenzi <trescenzi@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"


[dependencies]
wasm-bindgen = "0.2.63"
levenshtein = "1.0.5"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.48"
features = [ "console" ]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# prefer performance(~5% improvement over "s")
opt-level = 3 
